[project]
name = "ryan-ppo"
version = "0.1.0"
authors = [
  { name="Ryan Donald" }
]
requires-python = ">=3.10"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["ryan_ppo", "ryan_tasks"]
known-third-party = ["wandb", "gymnasium", "isaaclab_tasks", "torch", "numpy"]